--- a/public/chats-how-node.css
+++ b/public/chats-how-node.css
@@ -174,3 +174,8 @@ button {
     margin-left: 25% !important;
   }
 }
+@media only screen and (max-width: 360px) {
+  .chat-message {
+    max-width: 150px;
+  }
+}
