--- a/public/index.ejs
+++ b/public/index.ejs
@@ -101,7 +101,7 @@
 
           if(digite.digit) {
             if(!digit) {
-                const load = "<div class='chat-message start typing'>Digitando...</div>";
+                const load = "<div class='chat-message client typing'>Digitando...</div>";
                 $('.area-chat').innerHTML = areaChat.innerHTML + load;
             }
           }
